@startuml
title "Domain Model Extract- View Board History"
left to right direction
top to bottom direction
skinparam padding 10
skinparam nodesep 80
skinparam ranksep 100
skinparam groupInheritance 1
skinparam linetype ortho
skinparam separation 1000
skinparam NoteBackgroundColor #A9A9A9
skinparam package {
    BackgroundColor #D3D3D3
    FontStyle bold
}

hide circle
hide methods
package Board{
  class Board <<root>> {
    - maxColumns
    - maxRows
  }

  class Title <<value object>> {}

  class Column <<entity>>{
    - title
    - id
  }

  class Row <<entity>>{
    - title
    - id
  }

  class State <<enum>> {}

  note bottom of State {
    active
    archived
  }
}

package BoardUpdate {
  class Update <<root>> {
    - timestamp
  }

  ' class UpdateType <<enum>> {}

  class BoardUpdate <<entity>> {}

  class CellUpdate <<entity>> {}

  class BoardUpdateType <<enum>> {}

  class CellUpdateType <<enum>> {}

  class BoardChange <<value object>> {}

  class ContentType <<enum>>{}

  note bottom of ContentType {
    text
    image
  }

  class Content <<value object>>{
    -timestamp
  }

}
Board.Board --> Board.Title : has
Board.Board --> "*" Board.Column : has
Board.Board --> "*" Board.Row : has
Board.Board --> eCourseUser.eCourseUser : owned by
Board.Board --> Board.State : has
Board.Board ..> eCourseUser.eCourseUser : created by
Board.Board ..> eCourseUser.eCourseUser : viewed by
Board.Board --> "*" BoardUpdate.Update : has
BoardUpdate.Update <|-- BoardUpdate.CellUpdate : is a
BoardUpdate.Update <|-- BoardUpdate.BoardUpdate : is a
BoardUpdate.Update --> eCourseUser.eCourseUser : is made by
BoardUpdate.Content "N"-->"N" eCourseUser.eCourseUser : is altered by
BoardUpdate.Content "N"-->"1" eCourseUser.eCourseUser : change reversed by
@enduml